--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-MAIN PAGE
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <!-- Place favicon.ico in the root directory -->
+
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+        <a id="logo" href="http://www.getaboard.co">Aboard</a>
+        <ul id="taglines">
+            <li class="tagline">Reserve your spot on the shuttle on-the-go</li>
+            <li class="tagline">Get timely reminders and notifications about your rides</li>
+            <li class="tagline">Easily reach out to co-workers when they’re running late</li>
+        </ul>
+        <br />
+        <a id="download" href="javascript:alert('not yet!')">Download the Beta (iOS only)</a>
+        <div id ="screenshots">
+            <img class="screenshot" src="images/screenshots/Title.png" />
+            <img class="screenshot" src="images/screenshots/Browse Rides.png" />
+            <img class="screenshot" src="images/screenshots/Profile.png" />
+            <img class="screenshot" src="images/screenshots/RideDetail-NoReservation.png" />
+            <img class="screenshot" src="images/screenshots/RideDetail-RiderList-Reservation.png" />
+        </div>
+    </body>
+</html>
