Improved HTML comments

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!--
+Check the source code of the iOS app at https://github.com/aboardapp/iOS
+:)
+-->
 <!doctype html>
 <html class="no-js" lang="">
     <head>
