--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Check the source code of the iOS app at https://github.com/aboardapp/iOS
             <li class="tagline">Easily reach out to co-workers when they’re running late</li>
         </ul>
         <br />
-        <a id="download" href="javascript:alert('not yet!')">Download the Beta (iOS only)</a>
+        <a id="download" href="itms-services://?action=download-manifest&url=https://install.diawi.com/app-manifest/9c086f703e113c5517106112e556d671f384fc9e.plist">Download the Beta (iOS only)</a>
         <div id ="screenshots">
             <img class="screenshot" src="images/screenshots/Title.png" />
             <img class="screenshot" src="images/screenshots/Browse Rides.png" />
